Fix Authentication Update dependencies Update to Electron v4.0.1 Set episode progressbar calculation to 80% if unknown episode amount and progress over 80% Begin work on Home page Change menu Begin work on customizable table columns

--- a/src/renderer/assets/locales/ar.json
+++ b/src/renderer/assets/locales/ar.json
@@ -152,6 +152,7 @@
     },
     "menu": {
       "listStatus": {
+        "home": "Home",
         "completed": "({amount}) إنتهى",
         "dropped": "({amount}) ملغى",
         "onHold": "({amount}) إيقاف مؤقت",
