--- a/src/renderer/assets/locales/en.json
+++ b/src/renderer/assets/locales/en.json
@@ -152,6 +152,7 @@
     },
     "menu": {
       "listStatus": {
+        "home": "Home",
         "completed": "Completed ({amount})",
         "dropped": "Dropped ({amount})",
         "onHold": "Paused ({amount})",
