Activate DiscordRPC Add translations

--- a/src/renderer/assets/locales/en.json
+++ b/src/renderer/assets/locales/en.json
@@ -66,6 +66,7 @@
       "submitDelete": "Submit Delete!"
     },
     "constants": {
+      "airingFinished": "Airing finished",
       "airingIn": "Episode {episode} is airing {time}",
       "animeTitle": "Anime Title",
       "autumn": "Autumn",
