Add test purpose Watching page

--- a/src/assets/locales/de.json
+++ b/src/assets/locales/de.json
@@ -27,7 +27,8 @@
   },
   "menu": {
     "home": "Home",
-    "settings": "Einstellungen"
+    "settings": "Einstellungen",
+    "watching": "Laufend"
   },
   "$vuetify": {
     "noDataText": "Keine Daten"
