Add Cards for List TODO get mediaTitle Navigation bar working

--- a/src/assets/locales/de.json
+++ b/src/assets/locales/de.json
@@ -5,6 +5,9 @@
     "actions": {
       "login": "Login"
     },
+    "aniList": {
+      "currentProgress": "{0} / {1}"
+    },
     "modules": {
       "aniList": "AniList"
     },
