Add Latest activities Add large avatar image Add shadow for profile image Add adult alert in list Add a jump to top button

--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -3,9 +3,15 @@
   "englishReading": "English",
   "system": {
     "actions": {
-      "login": "Login"
+      "login": "Login",
+      "sort": "Sort",
+      "toPageTop": "Jump to top"
+    },
+    "alerts": {
+      "adultContent": "This media is considered adult content! Viewer Discretion Advised."
     },
     "aniList": {
+      "activities": "Activities",
       "currentProgress": "{0} / {1}"
     },
     "modules": {
