--- a/src/assets/locales/de.json
+++ b/src/assets/locales/de.json
@@ -3,9 +3,15 @@
   "englishReading": "German",
   "system": {
     "actions": {
-      "login": "Login"
+      "login": "Login",
+      "sort": "Sortieren",
+      "toPageTop": "Zum Anfang springen"
+    },
+    "alerts": {
+      "adultContent": "Dieses Element ist für Jugendliche unter 18 Jahren ungeeignet!"
     },
     "aniList": {
+      "activities": "Aktivitäten",
       "currentProgress": "{0} / {1}"
     },
     "modules": {
@@ -19,7 +25,7 @@
         "loggedInAs": "Eingeloggt als {0}"
       },
       "appSettings": {
-        "chooseLanguage": "Sprache wählen"
+        "chooseLanguage": "Sprache wählen (Choose language)"
       },
       "menu": {
         "about": "Über ZeroTwo",
