Begin implementing Detail view Move some Navigation stuff Move AniList routing to dedicated file Add documentation for some AniList interfaces Add route for detail view Add folder dedicated to AniList views

--- a/src/assets/locales/de.json
+++ b/src/assets/locales/de.json
@@ -4,6 +4,7 @@
   "system": {
     "actions": {
       "addToPlanToWatch": "Zur Plan-Liste hinzufügen",
+      "back": "Zurück",
       "loading": "Lädt...",
       "login": "Login",
       "resetImageCache": "Bildercache leeren",
@@ -37,6 +38,7 @@
     },
     "routes": {
       "aniList": "AniList",
+      "detailView": "Detail-Ansicht",
       "seasonPreview": "Saison-Vorschau",
       "settings": "Einstellungen"
     },
