--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -14,8 +14,11 @@
     "alerts": {
       "adultContent": "This media is considered adult content! Viewer Discretion Advised.",
       "noDescription": "No description available.",
+      "noEnglishTitle": "No English title available.",
+      "noInformation": "No information available.",
       "noSynonyms": "No synonyms available.",
-      "unauthenticated": "You are not authenticated!"
+      "unauthenticated": "You are not authenticated!",
+      "unknown": "Unknown"
     },
     "aniList": {
       "activities": "Activities",
@@ -83,8 +86,13 @@
     "airingWithUnknownStart": "? - {0}",
     "description": "Description",
     "englishTitle": "English title",
+    "episodes": "Episoden",
     "genres": "Genres",
     "nativeTitle": "Native title",
+    "romajiTitle": "Rōmaji title",
+    "score": "{0} / {1} points",
+    "scoreLabel": "Average score",
+    "streamingSubheader": "Streaming services",
     "synonyms": "Synonyms"
   },
   "menu": {
