--- a/src/assets/locales/ja.json
+++ b/src/assets/locales/ja.json
@@ -3,6 +3,7 @@
   "englishReading": "Japanese",
   "system": {
     "actions": {
+      "add": "追加",
       "addToPlanToWatch": "見る予定リストに追加",
       "back": "戻る",
       "loading": "通信中・・・",
@@ -17,6 +18,7 @@
       "noEnglishTitle": "英語のタイトルはありません。",
       "noInformation": "情報がありません。",
       "noSynonyms": "シノニムはありません。",
+      "notYetInList": "このメディアはまだ、リストにはありません。",
       "unauthenticated": "まだログインしませんでした！",
       "unknown": "未知"
     },
@@ -46,6 +48,9 @@
       "detailView": "インフォーメーション",
       "seasonPreview": "シーズン予告",
       "settings": "環境設定"
+    },
+    "rules": {
+      "required": "入力必要です！"
     },
     "settings": {
       "aboutZeroTwo": {
@@ -80,7 +85,8 @@
   },
   "detailView": {
     "airedOn": "{0}～{1}",
-    "airingStarts": "{0}に始める",
+    "airingStartedOn": "{0}に始まりました",
+    "airingStarts": "{0}に始まる",
     "airingTime": "最初放送",
     "airingWithUnknownStart": "？ - {0}",
     "description": "内容",
@@ -88,11 +94,23 @@
     "episodes": "エピソード数",
     "genres": "ジャンル",
     "nativeTitle": "ネイティブ・タイトル",
+    "ownInformation": "自分のリストの情報",
+    "ownProgress": "進行",
+    "ownStatus": "ステータス",
+    "ownScore": "スコア",
     "romajiTitle": "ローマ字・タイトル",
     "score": "{1}点満点の{0}点",
     "scoreLabel": "平均値点",
     "streamingSubheader": "放送サービス（英語）",
     "synonyms": "シノニム"
+  },
+  "listStatusses": {
+    "completed": "終了",
+    "dropped": "中止",
+    "paused": "一時的中止",
+    "planning": "予定",
+    "repeating": "再見",
+    "watching": "見る中"
   },
   "menu": {
     "completed": "終了",
