--- a/src/assets/locales/ja.json
+++ b/src/assets/locales/ja.json
@@ -35,6 +35,7 @@
           "ログインデータを入力して成功に完成しましたはずです。"
         ]
       },
+      "missingEpisodes": "１つのエピソードが見残る | {count}つのエピソードが見残る",
       "nextAiringEpisode": "第{0}話は{1}に放送開始"
     },
     "dates": {
