--- a/src/assets/locales/de.json
+++ b/src/assets/locales/de.json
@@ -35,6 +35,7 @@
           "Nach Eingabe der Login-Daten schließt sich das Fenster wieder und der Login-Prozess sollte erfolgreich abgeschlossen sein."
         ]
       },
+      "missingEpisodes": "Noch eine Folge gucken | Noch {count} Folgen gucken",
       "nextAiringEpisode": "Ausstrahlung von Episode {0} {1}"
     },
     "dates": {
