--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -36,6 +36,7 @@
         ]
       },
       "missingEpisodes": "One episode to watch | {count} episodes to watch",
+      "notYetAired": "Not yet aired",
       "nextAiringEpisode": "Episode {0} is airing {1}"
     },
     "dates": {
