Add search button in navigation. Add refresh timer. Fix error in vue template concerning v-if and v-for usage in the same element.

--- a/src/assets/locales/de.json
+++ b/src/assets/locales/de.json
@@ -10,6 +10,7 @@
       "login": "Login",
       "remove": "Entfernen",
       "save": "Speichern",
+      "search": "Suche",
       "sort": "Sortieren",
       "toPageTop": "Zum Anfang springen"
     },
