--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -10,6 +10,7 @@
       "login": "Login",
       "remove": "Remove",
       "save": "Save",
+      "search": "Search",
       "sort": "Sort",
       "toPageTop": "Jump to top"
     },
