--- a/src/assets/locales/ja.json
+++ b/src/assets/locales/ja.json
@@ -10,6 +10,7 @@
       "login": "ログイン",
       "remove": "削除",
       "save": "保存",
+      "search": "検索",
       "sort": "並べる",
       "toPageTop": "トップへ"
     },
