--- a/src/assets/locales/ja.json
+++ b/src/assets/locales/ja.json
@@ -69,15 +69,9 @@
       },
       "aniList": {
         "loggedInAs": "{0}として認識しました",
-        "resetImageCache": {
-          "title": "イメージのキャッシュを消す",
-          "body": [
-            "ゼロツーはイメージ、例えばプロファイルのアバターやメディアのカバーイメージ、を保存します。",
-            "この機能はサーバーへの要求数と通信時間を減ります。",
-            "追加的に、保存させたイメージはオフラインの時にアクセス出来ます。",
-            "とりあえず、この機能は強制起動です。無効にしたければ、GitHubに課題を開きましてください。そこで、起動や無効のメリットやデメリットを詮議できます。"
-          ]
-        }
+        "refreshRate": "更新のインターバル",
+        "refreshRateSuffix": "分",
+        "refreshRateHint": "このインターバルは「AniList」のサーバーとの次の更新までの時間を決まります。変更したインターバルは次の更新から発動します。"
       },
       "appSettings": {
         "chooseLanguage": "言語を選択してください (Choose language)",
